@@ -139,8 +139,7 @@
 <!-- This is the html for a slot if the user is anonymous -->
 <metal:macro metal:define-macro="anonymous_slot" i18n:domain="rg.prenotazioni">
   <div class="slot" tal:repeat="slot python:slots[gate]">
-    <div tal:define="booking nocall:slot/context"
-         class="unbookable"
+    <div tal:define="booking nocall:slot/context;"
          tal:attributes="style slot/css_styles">
       <tal:comment condition="nothing">
         This is for free space
